--- a/src/app/pages/view-all/view-all.html
+++ b/src/app/pages/view-all/view-all.html
@@ -16,7 +16,7 @@
               <div class="d-flex align-items-center justify-content-start">
                 <span class="d-flex align-items-center justify-content-start star-container">4.7</span>
                 
-                @for( i of [].constructor(totalStars); track i) {
+                @for (_ of [].constructor(totalStars); track $index){
                   <div class="d-flex align-items-center justify-content-start star-container">
                     <div class="star-wrapper"
                          [ngStyle]="{position:'relative', width:'8px', height:'10px', display:'flex', margin:'0', padding:'0'}">
@@ -28,7 +28,7 @@
                             position:'absolute',
                             top:'0',
                             left:'0',
-                            width:getStarFill(i)+'%',
+                            width:getStarFill($index)+'%',
                             overflow:'hidden',
                             whiteSpace:'nowrap'
                           }">★</div>
@@ -75,7 +75,7 @@
               <div class="d-flex align-items-center justify-content-start">
                 <h4 class="d-flex align-items-center justify-content-start star-container">4.7</h4>
 
-                @for( i of [].constructor(totalStars); track i) {
+                @for (_ of [].constructor(totalStars); track $index){
                   <div class="d-flex align-items-center justify-content-start star-container">
                     <div class="star-wrapper"
                          [ngStyle]="{position:'relative', width:'25px', height:'30px', display:'flex', margin:'0', padding:'0'}">
@@ -87,7 +87,7 @@
                             position:'absolute',
                             top:'0',
                             left:'0',
-                            width:getStarFill(i)+'%',
+                            width:getStarFill($index)+'%',
                             overflow:'hidden',
                             whiteSpace:'nowrap'
                           }">★</div>
