--- a/src/app/layout/layout.html
+++ b/src/app/layout/layout.html
@@ -1,5 +1,10 @@
  <div class="d-flex flex-column min-vh-100 layout">
-<app-header [sticky]="isSticky()"  [(keyword)]="keyword" (isScrollingChange)="onScrollingChange($event)"></app-header>
+<app-header [sticky]="isSticky()" 
+ [(keyword)]="keyword"
+  (isScrollingChange)="onScrollingChange($event)"
+  (hasSearchedEmit)="onhasSearch($event)"
+  
+  ></app-header>
 
 
  <main class="flex-fill"  id="main-content">
