--- a/src/app/pages/view-all/view-all.html
+++ b/src/app/pages/view-all/view-all.html
@@ -3,42 +3,94 @@
   <div class="row g-3 align-items-start w-100 m-0 p-0">
 
     @if(!isFullMap()) {
-      <div class="col-10 col-md-6 col-lg-4 col-xl-7 bg-white text-black m-0 p-0" style="height:1500px;">
-        <div>10 restaurant</div>
-        <div class="bg-danger" (click)="onTap()">
-          <div class="row" style="cursor:pointer;">
-            <div class="col-4" style="height:150px;">
-              <img src="https://images.unsplash.com/photo-1517248135467-4c7edcad34c4" 
-                   class="img-fluid" 
-                   style="height:100%; width:100%; object-fit:cover;">
+      <div class="col-10 col-md-6 col-lg-4 col-xl-7 bg-white text-black m-0 p-0" >
+        <div>{{restaurants().length}} restaurant</div>
+             @if(restaurants().length>0){
+        @for(restaurant of restaurants();track restaurant.osmId){
+<div (click)="onTap()">
+        <div class="row" style="
+    cursor: pointer;
+    background-color: white;
+    margin-left: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+">
+            <div class="col-5 col-md-4" style="height:150px;background-color: grey; border-radius: 5px;">
+              @if (restaurant.image) {
+    <img
+      [src]="restaurant.image"
+      class="img-fluid"
+      style="height:100%; width:100%; object-fit:cover;"
+      alt=""
+    />
+  } @else {
+    <div   style="height:100%; width:100%; background-color: grey;"></div>
+  }
             </div>
-            <div class="col-7">
+            <div class="col-7 col-md-8">
+              <div>{{restaurant.name}}</div>
               <div class="d-flex align-items-center justify-content-start">
-                <span class="d-flex align-items-center justify-content-start star-container">4.7</span>
-                
-                @for (_ of [].constructor(totalStars); track $index){
+                <span class="d-flex align-items-center justify-content-start star-container">{{
+getRating(restaurant)
+  }}</span>
+
+         
+              @for (_ of [].constructor(totalStars); track $index){
                   <div class="d-flex align-items-center justify-content-start star-container">
-                    <div class="star-wrapper"
-                         [ngStyle]="{position:'relative', width:'8px', height:'10px', display:'flex', margin:'0', padding:'0'}">
-                      <div [ngStyle]="{color:'lightgray', fontSize:'10px', lineHeight:'1', position:'absolute', top:'0', left:'0'}">★</div>
+                    <div class="star-wrapper" [ngStyle]="{
+                      position: 'relative',
+                      width: '8px',
+                      height: '10px',
+                      margin: '0',
+                      padding: '0',
+                      display: 'flex'
+                    }">
                       <div [ngStyle]="{
-                            color:'red',
-                            fontSize:'10px',
-                            lineHeight:'1',
-                            position:'absolute',
-                            top:'0',
-                            left:'0',
-                            width:getStarFill($index)+'%',
-                            overflow:'hidden',
-                            whiteSpace:'nowrap'
-                          }">★</div>
+                        color: 'lightgray',
+                        fontSize: '10px',
+                        lineHeight: '1',
+                        position: 'absolute',
+                        top: '0',
+                        left: '0'
+                      }">★</div>
+
+                      <div [ngStyle]="{
+                        color: 'red',
+                        fontSize: '10px',
+                        lineHeight: '1',
+                        position: 'absolute',
+                        top: '0',
+                        left: '0',
+                        width:getStarFill(
+        $index,
+       getRating(restaurant)
+      ) + '%',
+                        overflow: 'hidden',
+                        whiteSpace: 'nowrap'
+                      }">★</div>
                     </div>
                   </div>
                 }
               </div>
+            <div style="
+    color: blue;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    width: 100%;
+">{{restaurant.openingHour}}</div>
             </div>
           </div>
         </div>
+
+
+        }
+
+        }@else{
+<div>Không có nhà nào </div>
+
+
+        }
       </div>
     }
 
@@ -56,15 +108,15 @@
 
       <div id="map" style="height:100%; width:100%; z-index:1; margin:0; padding:0;"></div>
 
-      @if(isClickMarker()) {
+        @if(isClickMarker()) {
         <div class="restaurant-panel">
           <div class="panel-overlay">
             <div class="restaurant-card" (click)="goToRestaurantPage()">
-              
+
               <div class="restaurant-image" [ngStyle]="{
-                    'background-image': restaurant?.image ? 'url(' + restaurant.image + ')' : 'none',
-                    'background-color': restaurant?.image ? 'transparent' : 'grey'
-                  }">
+                'background-image': restaurant?.image ? 'url(' + restaurant.image + ')' : 'none',
+                'background-color': restaurant?.image ? 'transparent' : 'grey'
+              }">
                 <button class="close-btn" (click)="closeMarker($event)">
                   <i class="fa fa-times"></i>
                 </button>
@@ -73,24 +125,38 @@
               <div class="restaurant-name">{{ restaurant.name }}</div>
 
               <div class="d-flex align-items-center justify-content-start">
-                <h4 class="d-flex align-items-center justify-content-start star-container">4.7</h4>
+                <h4 class="d-flex align-items-center justify-content-start star-container">{{overallrating()}}</h4>
 
-                @for (_ of [].constructor(totalStars); track $index){
+               @for (_ of [].constructor(totalStars); track $index) {
                   <div class="d-flex align-items-center justify-content-start star-container">
-                    <div class="star-wrapper"
-                         [ngStyle]="{position:'relative', width:'25px', height:'30px', display:'flex', margin:'0', padding:'0'}">
-                      <div [ngStyle]="{color:'lightgray', fontSize:'30px', lineHeight:'1', position:'absolute', top:'0', left:'0'}">★</div>
+                    <div class="star-wrapper" [ngStyle]="{
+                      position: 'relative',
+                      width: '25px',
+                      height: '30px',
+                      margin: '0',
+                      padding: '0',
+                      display: 'flex'
+                    }">
                       <div [ngStyle]="{
-                            color:'red',
-                            fontSize:'30px',
-                            lineHeight:'1',
-                            position:'absolute',
-                            top:'0',
-                            left:'0',
-                            width:getStarFill($index)+'%',
-                            overflow:'hidden',
-                            whiteSpace:'nowrap'
-                          }">★</div>
+                        color: 'lightgray',
+                        fontSize: '30px',
+                        lineHeight: '1',
+                        position: 'absolute',
+                        top: '0',
+                        left: '0'
+                      }">★</div>
+
+                      <div [ngStyle]="{
+                        color: 'red',
+                        fontSize: '30px',
+                        lineHeight: '1',
+                        position: 'absolute',
+                        top: '0',
+                        left: '0',
+                        width: getStarFill($index) + '%',
+                        overflow: 'hidden',
+                        whiteSpace: 'nowrap'
+                      }">★</div>
                     </div>
                   </div>
                 }
@@ -98,6 +164,7 @@
 
               <div class="restaurant-hours">{{ restaurant.openingHour }}</div>
               <div class="tap-to-open">Tap to open page</div>
+
             </div>
           </div>
         </div>
