--- a/src/app/components/hight-scroll/hight-scroll.scss
+++ b/src/app/components/hight-scroll/hight-scroll.scss
@@ -56,9 +56,11 @@
 }
 
 .town-card {
-  min-width: 180px;
-  background-color:red;
+  width: 250px;
+ flex-shrink: 0;
+  border-radius: 5px;
   cursor: pointer;
+  border: 1px  solid grey;;
 }
 
 /* Buttons */
