--- a/src/app/components/town-scroll/town-scroll.html
+++ b/src/app/components/town-scroll/town-scroll.html
@@ -14,19 +14,31 @@
 
     <div class="scroll-row" #scrollContainer (scroll)="checkScroll()">
 
-      @for (item of wards(); track item.ward.name) {
+      @for (item of wards(); track $index) {
 
-        <div class="town-card" (click)="goToWard(item)">
+        <div class="town-card"  (click)="goToWard(item)"  style="width: 250px;">
 
-          <div class="image"
-               [style.backgroundImage]="'url(' + (item.ward.image || 'https://via.placeholder.com/150') + ')'">
+          <div class="image">
+                   @if (item.image) {
+    <img
+      [src]="item.image"
+      class="img-fluid"
+      style="height:100%; width:100%; object-fit:cover;"
+      alt=""
+    />
+  } @else {
+    <div   style="height:100%; width:100%; background-color: grey;"></div>
+  }
+     
           </div>
 
-          <div class="title">{{ item.ward.name }}</div>
+          <div class="title">{{ item.name }}</div>
 
           <div class="d-flex align-items-center justify-content-start">
             <span class="d-flex align-items-center justify-content-start star-container">
-              4.7
+            {{
+getRating(item)
+  }}
             </span>
 
             @for (i of starIndexes; track i) {
@@ -57,7 +69,10 @@
                       position: 'absolute',
                       top: '0',
                       left: '0',
-                      width: getStarFill(i) + '%',
+                      width:getStarFill(
+        $index,
+       getRating(item)
+      ) + '%',
                       overflow: 'hidden',
                       whiteSpace: 'nowrap'
                     }">★
@@ -68,7 +83,13 @@
             }
           </div>
 
-          <div class="subtitle">{{ item.count }} Restaurant</div>
+            <div style="
+    color: blue;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    width: 100%;
+">{{item.openingHour}}</div>
         </div>
 
       } 
