--- a/src/app/components/town-scroll/town-scroll.scss
+++ b/src/app/components/town-scroll/town-scroll.scss
@@ -21,7 +21,7 @@
 
 
 .image {
-  width: 100%;
+ 
   height: 140px;
   border-radius: 12px;
   background-size: cover;
@@ -56,12 +56,14 @@
 }
 
 .town-card {
-  min-width: 180px;
-  background-color:red;
+  width: 250px;
+  flex-shrink: 0;
+  border-radius: 5px;
   cursor: pointer;
+  border: 1px  solid grey;
 }
 
-/* Buttons */
+//Buttons 
 .scroll-btn {
   position: absolute;
   top: 50%;
