--- a/src/app/pages/wardrestaurant/wardrestaurant.scss
+++ b/src/app/pages/wardrestaurant/wardrestaurant.scss
@@ -1,1 +1,56 @@
 
+//Result search
+.dropdown-container {
+  position: absolute;
+  top: 50px;      
+  width: 100%;
+  background-color: #fff;
+  border: 1px solid grey; 
+  border-radius: 4px;
+  z-index: 10;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  max-height: 250px;  
+  overflow-y: auto;
+}
+
+
+.location-item {
+  display: flex;
+  align-items: start;  
+  padding: 10px 12px;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+
+  &:hover {
+    background-color: red; 
+  }
+
+  .icon {
+    margin-right: 10px;
+    font-size: 18px;
+    color: bkack; 
+    flex-shrink: 0;
+  }
+
+  .text-container {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+
+    .name {
+      font-weight: 600;
+      font-size: 14px;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+
+    .display-name {
+      font-size: 12px;
+      color: grey;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+  }
+}
